@@ -6,6 +6,7 @@ import com.firstlogistics.hubservice.hub.application.dto.query.SearchHubsQuery;
 import com.firstlogistics.hubservice.hub.application.dto.result.HubDetailsResult;
 import com.firstlogistics.hubservice.hub.application.dto.result.HubSummaryResult;
 import com.firstlogistics.hubservice.hub.domain.enums.HubStatus;
+import com.firstlogistics.hubservice.hub.domain.enums.HubType;
 import com.firstlogistics.hubservice.hub.domain.exception.HubErrorCode;
 import com.firstlogistics.hubservice.hub.domain.exception.HubException;
 import com.firstlogistics.hubservice.hub.domain.repository.HubQueryRepository;
@@ -94,6 +95,7 @@ public class HubQueryServiceTest {
                 36.0,
                 126.0,
                 HubStatus.ACTIVE,
+                HubType.GENERAL,
                 LocalDateTime.now(),
                 LocalDateTime.now()
         );
@@ -128,9 +130,9 @@ public class HubQueryServiceTest {
 
         Page<HubSummaryResult> result = hubQueryService.searchHubs(query, pageable);
         assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getContent().get(0).hubId()).isEqualTo(dto.hubId());
-        assertThat(result.getContent().get(0).name()).isEqualTo(dto.name());
-        assertThat(result.getContent().get(0).status()).isEqualTo(dto.status());
+        assertThat(result.getContent().getFirst().hubId()).isEqualTo(dto.hubId());
+        assertThat(result.getContent().getFirst().name()).isEqualTo(dto.name());
+        assertThat(result.getContent().getFirst().status()).isEqualTo(dto.status());
     }
 
     @Test
